--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
   firebase_analytics: ^6.0.2
   firebase_storage: ^5.0.0-dev.3
   cloud_firestore: ^0.14.1+3
-  firebase_ml_vision: ^0.9.7
+  firebase_ml_custom: ^0.0.3
+  tflite: ^1.1.1
   video_player:
   chewie:
   cached_network_image:
@@ -39,6 +40,7 @@ dependencies:
   image_picker:
   camera:
   intl: ^0.16.1
+  image: ^2.1.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -140,9 +142,10 @@ flutter:
     - images/comm6.png
     - images/big_appIcon.png
     - images/add.png
-    - assets/FlowersModel/dict.txt
-    - assets/FlowersModel/manifest.json
-    - assets/FlowersModel/model.tflite
+    - assets/Grow_Lah_Flowers/dict.txt
+    - assets/manifest.json
+    - assets/model.tflite
+    - assets/labels_Grow_Lah_Flowers.txt
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
