--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,14 @@ dependencies:
   firebase_analytics: ^6.0.2
   firebase_storage: ^5.0.0-dev.3
   cloud_firestore: ^0.14.1+3
-  firebase_ml_custom: ^0.0.3
-  tflite: ^1.1.1
+  #firebase_ml_custom: ^0.0.3
+  #tflite: ^1.1.1
+  tflite_flutter_helper: ^0.1.1
+  # tflite_flutter: ^0.5.0
   video_player:
   chewie:
   cached_network_image:
+  collection: any
   path_provider:
   image_picker:
   camera:
@@ -48,6 +51,8 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+#  tflite: ^1.1.1
+#
 
 # The following section is specific to Flutter.
 flutter:
