--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -21,14 +21,17 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
-aaptOptions {
-    noCompress "tflite"
-}
-
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
+
+def keystoreProperties = new Properties()
+   def keystorePropertiesFile = rootProject.file('key.properties')
+   if (keystorePropertiesFile.exists()) {
+       keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+   }
+
 
 android {
     compileSdkVersion 28
@@ -43,6 +46,9 @@ android {
     lintOptions {
         disable 'InvalidPackage'
     }
+    aaptOptions {
+    noCompress "tflite"
+}
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
@@ -53,6 +59,14 @@ android {
         versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    signingConfigs {
+       release {
+           keyAlias keystoreProperties['keyAlias']
+           keyPassword keystoreProperties['keyPassword']
+           storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+           storePassword keystoreProperties['storePassword']
+       }
+   }
 
     buildTypes {
         release {
@@ -74,6 +88,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.google.firebase:firebase-analytics:17.6.0'
     implementation platform('com.google.firebase:firebase-bom:25.12.0')
+    implementation 'com.google.firebase:firebase-database'
     implementation "com.google.ar.sceneform.ux:sceneform-ux:1.17.1"
     implementation 'com.google.ar.sceneform:core:1.17.1'
 }
