--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^1.0.0
   fluttertoast: ^7.0.4
   flutter_neumorphic: any
   arcore_flutter_plugin: ^0.0.8
@@ -35,8 +35,8 @@ dependencies:
   #tflite: ^1.1.1
   tflite_flutter_helper: ^0.1.1
   # tflite_flutter: ^0.5.0
-  video_player:
-  chewie:
+  video_player: ^1.0.1
+  chewie: ^0.12.0
   cached_network_image:
   collection: any
   path_provider:
@@ -47,6 +47,7 @@ dependencies:
   liquid_swipe: ^1.5.0
   carousel_slider: ^2.3.1
   firebase_database: ^4.3.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -153,6 +154,8 @@ flutter:
     - images/onboarding1.png
     - images/onboarding2.png
     - images/onboarding3.png
+    - images/Tomato1.png
+    - images/loadingGif.gif
     - assets/Grow_Lah_Flowers/dict.txt
     - assets/manifest.json
     - assets/model.tflite
