--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,7 +34,7 @@ def keystoreProperties = new Properties()
 
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 28 // 28
     compileOptions{
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -53,8 +53,8 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.growLah.grow_local_eat_local"
-        minSdkVersion 24
-        targetSdkVersion 29
+        minSdkVersion 24 //24
+        targetSdkVersion 30 //29
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -74,6 +74,16 @@ android {
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
         }
+        // debug {
+        //     signingConfig signingConfigs.debug
+        // }
+        // profile{
+        //     signingConfig signingConfigs.debug
+        // }
+        // innerTest {
+        //     //...
+        //     matchingFallbacks = ['debug', 'release']
+        // }
     }
 }
 
@@ -81,7 +91,14 @@ flutter {
     source '../..'
 }
 
+
+
+
+
+
 dependencies {
+    //implementation project(':unityLibrary')
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.3.0'
