--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   fluttertoast: ^7.0.4
   flutter_neumorphic: any
-  arcore_flutter_plugin: ^0.0.8
+  arcore_flutter_plugin: ^0.0.10
   firebase_auth: ^0.18.1+2
   firebase_core: ^0.5.0+1
   firebase_analytics: ^6.0.2
@@ -47,6 +47,8 @@ dependencies:
   liquid_swipe: ^1.5.0
   carousel_slider: ^2.3.1
   firebase_database: ^4.3.0
+  #flutter_unity_widget: ^3.0.1
+  arkit_plugin: ^0.6.0
 
 dev_dependencies:
   flutter_test:
@@ -156,6 +158,7 @@ flutter:
     - images/onboarding3.png
     - images/Tomato1.png
     - images/loadingGif.gif
+    - images/arrowAR.png
     - assets/Grow_Lah_Flowers/dict.txt
     - assets/manifest.json
     - assets/model.tflite
