--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,10 @@ dependencies:
   firebase_database: ^4.3.0
   #flutter_unity_widget: ^3.0.1
   arkit_plugin: ^0.6.0
+  clippy_flutter: ^1.1.1
+  google_fonts:
+  sms_autofill: ^1.2.6
+  json_to_form: "^0.0.1"
 
 dev_dependencies:
   flutter_test:
@@ -70,95 +74,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/phone_image.jpeg
-    - images/communicate.jpg
-    - images/video.jpg
-    - images/sell.png
-    - images/temp.png
-    - images/donate_hand.png
-    - images/refer.png
-    - images/logout.png
-    - images/settings.png
-    - images/subscribe.jpg
-    - images/profile.png
-    - images/language.jpg
-    - images/vertical_bed.jpeg
-    - images/flat_bed.jpeg
-    - images/video_new.png
-    - images/film.png
-    - images/dot.jpg
-    - images/circle.png
-    - images/sample1.jpeg
-    - images/sample2.jpeg
-    - images/sample3.jpeg
-    - images/sample4.jpeg
-    - images/sample5.jpeg
-    - images/sample6.jpeg
-    - images/sample7.jpeg
-    - images/sample8.jpeg
-    - images/options.jpeg
-    - images/share.jpeg
-    - images/favBlack.png
-    - images/favRed.jpg
-    - images/comment.png
-    - images/backKey.png
-    - images/backButton.jpg
-    - images/favNewRed.png
-    - images/big_cart.png
-    - images/capture_btn.png
-    - images/cart.png
-    - images/chat_bot.png
-    - images/cloud_btn.png
-    - images/coin_green.png
-    - images/coin_white.png
-    - images/donate_icon.png
-    - images/gift_box.png
-    - images/growlah_icon.png
-    - images/half_circle.png
-    - images/light_btn.png
-    - images/logout_icon.png
-    - images/news_feed.png
-    - images/notification.png
-    - images/profile_icon.png
-    - images/scan_spot.png
-    - images/send.png
-    - images/settings_icon.png
-    - images/smile.png
-    - images/stack.png
-    - images/stock_green.png
-    - images/subscription.png
-    - images/temp_btn.png
-    - images/temp_icon.png
-    - images/top.png
-    - images/video.png
-    - images/cloud.png
-    - images/nav.png
-    - images/yello_circle.png
-    - images/share.png
-    - images/profile.jpeg
-    - images/checked_icon.png
-    - images/filter.png
-    - images/focus.jpeg
-    - images/bg.jpeg
-    - images/chat.png
-    - images/app_logo.png
-    - images/bottom_logo.png
-    - images/scan_icon.png
-    - images/gPay.png
-    - images/comm1.jpeg
-    - images/comm2.jpeg
-    - images/comm3.png
-    - images/comm4.jpeg
-    - images/comm5.jpeg
-    - images/comm6.png
-    - images/big_appIcon.png
-    - images/add.png
-    - images/onboarding1.png
-    - images/onboarding2.png
-    - images/onboarding3.png
-    - images/Tomato1.png
-    - images/loadingGif.gif
-    - images/arrowAR.png
+    - images/
     - assets/Grow_Lah_Flowers/dict.txt
     - assets/manifest.json
     - assets/model.tflite
