--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   firebase_analytics: ^6.0.2
   firebase_storage: ^5.0.0-dev.3
   cloud_firestore: ^0.14.1+3
+  firebase_messaging: 
   #firebase_ml_custom: ^0.0.3
   #tflite: ^1.1.1
   tflite_flutter_helper: ^0.1.1
