--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,12 +26,13 @@ dependencies:
   fluttertoast: ^7.0.4
   flutter_neumorphic: any
   arcore_flutter_plugin: ^0.0.10
-  firebase_auth: ^0.18.1+2
-  firebase_core: ^0.5.0+1
-  firebase_analytics: ^6.0.2
-  firebase_storage: ^5.0.0-dev.3
-  cloud_firestore: ^0.14.1+3
-  firebase_messaging: 
+  firebase_auth: #^0.18.1+2
+  firebase_core: #^0.5.0+1
+  firebase_analytics: #^6.0.2
+  firebase_storage: #^5.0.0-dev.3
+  cloud_firestore: #^0.14.1+3
+  firebase_database: #^4.3.0
+  firebase_messaging: ^9.1.1
   #firebase_ml_custom: ^0.0.3
   #tflite: ^1.1.1
   tflite_flutter_helper: ^0.1.1
@@ -47,7 +48,6 @@ dependencies:
   image: ^2.1.4
   liquid_swipe: ^1.5.0
   carousel_slider: ^2.3.1
-  firebase_database: ^4.3.0
   #flutter_unity_widget: ^3.0.1
   arkit_plugin: ^0.6.0
   clippy_flutter: ^1.1.1
