--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,37 +23,37 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  fluttertoast: ^7.0.4
+  fluttertoast: ^8.0.7
   flutter_neumorphic: any
   arcore_flutter_plugin: ^0.0.10
   firebase_auth: #^0.18.1+2
   firebase_core: #^0.5.0+1
   firebase_analytics: #^6.0.2
-  firebase_storage: #^5.0.0-dev.3
+  firebase_storage: ^8.0.6 #^5.0.0-dev.3
   cloud_firestore: #^0.14.1+3
   firebase_database: #^4.3.0
-  firebase_messaging: ^9.1.1
+  firebase_messaging: ^10.0.1
   #firebase_ml_custom: ^0.0.3
   #tflite: ^1.1.1
-  tflite_flutter_helper: ^0.1.1
+  tflite_flutter_helper: #^0.1.1
   # tflite_flutter: ^0.5.0
-  video_player: ^1.0.1
-  chewie: ^0.12.0
+  video_player: ^2.1.5
+  chewie: ^1.2.1
   cached_network_image:
   collection: any
   path_provider:
   image_picker:
   camera:
-  intl: ^0.16.1
-  image: ^2.1.4
-  liquid_swipe: ^1.5.0
-  carousel_slider: ^2.3.1
+  intl: #^0.16.1
+  image: #^2.1.4
+  liquid_swipe: #^1.5.0
+  carousel_slider: #^2.3.1
   #flutter_unity_widget: ^3.0.1
-  arkit_plugin: ^0.6.0
-  clippy_flutter: ^1.1.1
+  arkit_plugin: ^1.0.1
+  clippy_flutter: #^1.1.1
   google_fonts:
-  sms_autofill: ^1.2.6
-  json_to_form: "^0.0.1"
+  sms_autofill: #^1.2.6
+  json_to_form: #"^0.0.1"
 
 dev_dependencies:
   flutter_test:
